--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "black>=25.1.0",
+    "pygame>=2.6.1",
+    "pylint>=3.3.8",
+    "ruff>=0.13.0",
+]
